--- a/Form.html
+++ b/Form.html
@@ -93,10 +93,10 @@
     <label>Телефон: <input type="text" name="phone" required></label>
     <label>Ответственный:
       <select name="responsible" required>
-        <option value="Владимир Канкасов">Владимир Канкасов</option>
-        <option value="Алла Старун">Алла Старун</option>
-        <option value="Владимир">Владимир</option>
-        <option value="Татьяна Иванова">Татьяна Иванова</option>
+        <option value="Риелтор1">Риелтор1</option>
+        <option value="Риелтор2">Риелтор2</option>
+        <option value="Риелтор3">Риелтор3</option>
+        <option value="Риелтор4">Риелтор4</option>
       </select>
     </label>
     <label>Описание: <textarea name="description"></textarea></label>
